[gd_scene load_steps=5 format=2]

[ext_resource path="res://collectibles/coin.gd" type="Script" id=1]
[ext_resource path="res://collectibles/coin.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "spin"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[node name="coin" type="Area2D"]

position = Vector2( 545.374, 201.608 )
scale = Vector2( 0.8, 0.8 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 1.32511, -0.956502 )
scale = Vector2( 0.58834, 0.588493 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Transform" ]

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.5
anims/spin = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
position = Vector2( 0.835571, -1.00543 )
scale = Vector2( 1.5437, 1.80216 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="coin_notifier" type="VisibilityEnabler2D" parent="." index="3"]

position = Vector2( 1.14734, -1.3886 )
scale = Vector2( 1.60309, 1.88361 )
rect = Rect2( -10, -10, 20, 20 )
pause_animations = true
freeze_bodies = true
pause_particles = true
pause_animated_sprites = true
process_parent = false
physics_process_parent = false

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]

[connection signal="screen_exited" from="coin_notifier" to="." method="_on_coin_notifier_screen_exited"]


